Add interactive output

--- a/Playing_with_gans.ipynb
+++ b/Playing_with_gans.ipynb
@@ -18,7 +18,9 @@
     "\n",
     "from IPython.display import clear_output\n",
     "import matplotlib.pyplot as plt\n",
-    "plt.ioff()"
+    "plt.ioff()\n",
+    "\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -459,8 +461,9 @@
     "#             plt.close()\n",
     "        \n",
     "    # Visualization\n",
-    "#     clear_output(True)\n",
-    "    vis(ep)"
+    "    clear_output(True)\n",
+    "    vis(ep)\n",
+    "    plt.show()"
    ]
   },
   {
