--- a/Playing_with_gans.ipynb
+++ b/Playing_with_gans.ipynb
@@ -196,7 +196,7 @@
     "    \n",
     "    plt.subplot(n_rows, n_cols, 5)\n",
     "    plt.scatter(val_noise[:, 0], val_noise[:, 1], marker='.',  c=cs)\n",
-    "    plt.title('Noise')\n",
+    "    plt.title('Input noise')\n",
     "    \n",
     "    plt.subplot(n_rows, n_cols, 6)\n",
     "    if random_matrix_l1 is None:\n",
@@ -204,7 +204,7 @@
     "    l1 = torch.mm(l1, random_matrix_l1)\n",
     "        \n",
     "    plt.scatter(l1[:, 0], l1[:, 1], marker='.',  c=cs)\n",
-    "    plt.title('L1')\n",
+    "    plt.title('Layer 1 activations')\n",
     "    \n",
     "    plt.subplot(n_rows, n_cols, 7)\n",
     "    if random_matrix_l2 is None:\n",
@@ -212,11 +212,11 @@
     "    l2 = torch.mm(l2, random_matrix_l2)\n",
     "        \n",
     "    plt.scatter(l2[:, 0], l2[:, 1], marker='.',  c=cs)\n",
-    "    plt.title('L2')\n",
+    "    plt.title('Layer 2 activations')\n",
     "\n",
     "    plt.subplot(n_rows, n_cols, 8)\n",
     "    plt.scatter(l3[:, 0], l3[:, 1], marker='.',  c=cs)\n",
-    "    plt.title('L3')\n",
+    "    plt.title('Layer 3 activations')\n",
     "\n",
     "def vis_D_decision_boundary():\n",
     "    g_fake = G(val_noise).detach()\n",
@@ -235,14 +235,27 @@
     "    plt.contourf(xx, yy, mesh_pred, cmap='coolwarm')\n",
     "    plt.colorbar()\n",
     "\n",
-    "def vis(ep):    \n",
+    "def vis_G_grad():\n",
+    "    fake = G(val_noise)\n",
+    "    fake_pred = D(fake).mean()\n",
+    "    d_fake = torch.autograd.grad(fake_pred, fake)[0]\n",
+    "\n",
+    "    arrow_mult = 2e2\n",
+    "    fake_d = fake.detach()\n",
+    "    for i in range(len(fake)):\n",
+    "        plt.arrow(fake_d[i, 0], fake_d[i, 1], d_fake[i, 0] * arrow_mult,\n",
+    "                  d_fake[i, 1] * arrow_mult, head_width=4e-2, color='g', alpha=0.4, width=5e-4)\n",
+    "\n",
+    "def vis(ep, with_grad=False):    \n",
     "    f = plt.figure(figsize=(16, 8))\n",
     "    plt.suptitle(f'Episode: {ep}')\n",
     "    \n",
     "    plt.subplot(n_rows, n_cols, 1)\n",
     "    vis_D_decision_boundary()\n",
     "    vis_real_fake()\n",
-    "    \n",
+    "    if with_grad:\n",
+    "        vis_G_grad()\n",
+    "\n",
     "    plt.subplot(n_rows, n_cols, 2)\n",
     "    vis_grad_norms()\n",
     "    \n",
@@ -287,7 +300,7 @@
     "    return total_norm\n",
     "\n",
     "class Generator(nn.Module):\n",
-    "    def __init__(self, hidden=16, act=torch.tanh):\n",
+    "    def __init__(self, hidden=8, act=torch.tanh):\n",
     "        super().__init__()\n",
     "        self.act = act\n",
     "        self.l1 = nn.Linear(2, hidden)\n",
@@ -307,7 +320,7 @@
     "        return l1, l2, l3\n",
     "\n",
     "class Discriminator(nn.Module):\n",
-    "    def __init__(self, hidden=16, act=torch.tanh):\n",
+    "    def __init__(self, hidden=8, act=torch.tanh):\n",
     "        super().__init__()\n",
     "        self.act = act\n",
     "        self.l1 = nn.Linear(2, hidden)\n",
@@ -335,19 +348,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "g_lr = 3e-2 * bs_multiplier\n",
+    "g_lr = 5e-2 * bs_multiplier\n",
     "d_lr = 5e-2 * bs_multiplier\n",
     "epochs = 50\n",
     "\n",
-    "G = Generator(act=torch.tanh) # torch.tanh or torch.relu\n",
-    "D = Discriminator(act=torch.tanh) # torch.tanh or torch.relu\n",
+    "G = Generator(hidden=16, act=torch.tanh) # torch.tanh or torch.relu\n",
+    "D = Discriminator(hidden=8, act=torch.tanh) # torch.tanh or torch.relu\n",
     "\n",
     "criterion = nn.BCELoss() # nn.BCELoss() or nn.MSELoss() \n",
     "\n",
     "g_optim = optim.SGD(G.parameters(), g_lr)\n",
     "d_optim = optim.SGD(D.parameters(), d_lr)\n",
     "\n",
-    "val_noise = get_noise(batch_size * len(synthetic_dl))"
+    "# g_optim = optim.Adam(G.parameters(), g_lr, betas=(0.5, 0.999))\n",
+    "# d_optim = optim.Adam(D.parameters(), d_lr, betas=(0.5, 0.999))\n",
+    "\n",
+    "val_noise = get_noise(batch_size * len(synthetic_dl) // 4)"
    ]
   },
   {
@@ -390,7 +406,8 @@
    "outputs": [],
    "source": [
     "vis_D_decision_boundary()\n",
-    "vis_real_fake()"
+    "vis_real_fake()\n",
+    "vis_G_grad()"
    ]
   },
   {
@@ -413,6 +430,7 @@
     "real_preds = []\n",
     "\n",
     "clear_animation_folder()\n",
+    "save_for_animation = True\n",
     "\n",
     "for ep in range(epochs):\n",
     "    for i, batch_data in enumerate(synthetic_dl):\n",
@@ -449,20 +467,22 @@
     "        g_grad_norms.append(get_grad_norm(G))\n",
     "        g_optim.step()\n",
     "        \n",
-    "        # Save for animation (slow), comment this for experiments\n",
-    "#         if i % 3 == 0:\n",
-    "#             f = plt.figure()\n",
-    "#             vis_D_decision_boundary()\n",
-    "#             vis_real_fake()\n",
-    "            \n",
-    "#             total_steps = ep * len(synthetic_dl) + i\n",
-    "#             plt.title(f'{total_steps / ((epochs + 1) * len(synthetic_dl)) * 100:.2f}%')\n",
-    "#             f.savefig(f'{animation_ims}/{total_steps:05}.jpg')\n",
-    "#             plt.close()\n",
-    "        \n",
+    "        # Save for animation (slow), disable this for experiments\n",
+    "        if save_for_animation:\n",
+    "            if i % 3 == 0:\n",
+    "                f = plt.figure()\n",
+    "                vis_D_decision_boundary()\n",
+    "                vis_real_fake()\n",
+    "                vis_G_grad()\n",
+    "                \n",
+    "                total_steps = ep * len(synthetic_dl) + i\n",
+    "                plt.title(f'{int(total_steps / ((epochs + 1) * len(synthetic_dl)) * 100)}%')\n",
+    "                f.savefig(f'{animation_ims}/{total_steps:05}.jpg')\n",
+    "                plt.close()\n",
+    "\n",
     "    # Visualization\n",
     "    clear_output(True)\n",
-    "    vis(ep)\n",
+    "    vis(ep, with_grad=True)\n",
     "    plt.show()"
    ]
   },
@@ -472,7 +492,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !convert -delay 5 -layers optimize animation_ims/*.jpg anim.gif"
+    "!convert -delay 10 -layers optimize animation_ims/*.jpg anim.gif"
    ]
   },
   {
@@ -483,13 +503,6 @@
     "- momentum\n",
     "- colab"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
