--- a/Playing_with_gans.ipynb
+++ b/Playing_with_gans.ipynb
@@ -240,15 +240,18 @@
     "    fake_pred = D(fake).mean()\n",
     "    d_fake = torch.autograd.grad(fake_pred, fake)[0]\n",
     "\n",
-    "    arrow_mult = 2e2\n",
+    "    arrow_mult = 5e1\n",
     "    fake_d = fake.detach()\n",
     "    for i in range(len(fake)):\n",
     "        plt.arrow(fake_d[i, 0], fake_d[i, 1], d_fake[i, 0] * arrow_mult,\n",
     "                  d_fake[i, 1] * arrow_mult, head_width=4e-2, color='g', alpha=0.4, width=5e-4)\n",
     "\n",
-    "def vis(ep, with_grad=False):    \n",
+    "def vis(ep, with_grad=False):\n",
+    "    G.eval()\n",
+    "    D.eval()\n",
+    "    \n",
     "    f = plt.figure(figsize=(16, 8))\n",
-    "    plt.suptitle(f'Episode: {ep}')\n",
+    "    plt.suptitle(f'Epoch: {ep}')\n",
     "    \n",
     "    plt.subplot(n_rows, n_cols, 1)\n",
     "    vis_D_decision_boundary()\n",
@@ -303,19 +306,29 @@
     "    def __init__(self, hidden=8, act=torch.tanh):\n",
     "        super().__init__()\n",
     "        self.act = act\n",
-    "        self.l1 = nn.Linear(2, hidden)\n",
-    "        self.l2 = nn.Linear(hidden, hidden)\n",
+    "        self.l1 = nn.Linear(2, hidden, bias=False)\n",
+    "        self.bn1 = nn.BatchNorm1d(hidden)\n",
+    "        self.l2 = nn.Linear(hidden, hidden, bias=False)\n",
+    "        self.bn2 = nn.BatchNorm1d(hidden)\n",
     "        self.l3 = nn.Linear(hidden, 2)\n",
     "    \n",
     "    def forward(self, x):\n",
     "        x = self.act(self.l1(x))\n",
+    "        x = self.bn1(x)\n",
+    "        \n",
     "        x = self.act(self.l2(x))\n",
+    "        x = self.bn2(x)\n",
+    "        \n",
     "        x = self.l3(x)\n",
     "        return x\n",
     "    \n",
     "    def forward_intermediate(self, x):\n",
     "        l1 = self.act(self.l1(x))\n",
+    "        l1 = self.bn1(l1)\n",
+    "        \n",
     "        l2 = self.act(self.l2(l1))\n",
+    "        l2 = self.bn2(l2)\n",
+    "        \n",
     "        l3 = self.l3(l2)\n",
     "        return l1, l2, l3\n",
     "\n",
@@ -323,22 +336,32 @@
     "    def __init__(self, hidden=8, act=torch.tanh):\n",
     "        super().__init__()\n",
     "        self.act = act\n",
-    "        self.l1 = nn.Linear(2, hidden)\n",
-    "        self.l2 = nn.Linear(hidden, hidden)\n",
+    "        self.l1 = nn.Linear(2, hidden, bias=False)\n",
+    "        self.bn1 = nn.BatchNorm1d(hidden)\n",
+    "        self.l2 = nn.Linear(hidden, hidden, bias=False)\n",
+    "        self.bn2 = nn.BatchNorm1d(hidden)\n",
     "        self.l3 = nn.Linear(hidden, 1)\n",
     "    \n",
     "    def forward(self, x):\n",
     "        x = self.act(self.l1(x))\n",
+    "        x = self.bn1(x)\n",
+    "        \n",
     "        x = self.act(self.l2(x))\n",
+    "        self.bn2(x)\n",
+    "        \n",
     "        x = torch.sigmoid(self.l3(x))\n",
     "        return x\n",
     "\n",
-    "def get_noise(bs):\n",
-    "    # uniform [-1, 1]\n",
-    "    # noise = torch.rand(bs, 2) * 2 - 1\n",
+    "def get_noise(bs, distribution='norm'):\n",
+    "    if distribution == 'uniform':\n",
+    "        # uniform [-1, 1]\n",
+    "        noise = torch.rand(bs, 2) * 2 - 1\n",
+    "    elif distribution == 'norm':\n",
+    "        # normal N(0, 1)\n",
+    "        noise = torch.randn(bs, 2)\n",
+    "    else:\n",
+    "        raise ValueError('Wrong distribution parameter')\n",
     "    \n",
-    "    # normal N(0, 1)\n",
-    "    noise = torch.randn(bs, 2)\n",
     "    return noise"
    ]
   },
@@ -348,17 +371,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "g_lr = 5e-2 * bs_multiplier\n",
+    "g_lr = 1e-2 * bs_multiplier\n",
     "d_lr = 5e-2 * bs_multiplier\n",
-    "epochs = 50\n",
+    "epochs = 20\n",
     "\n",
-    "G = Generator(hidden=16, act=torch.tanh) # torch.tanh or torch.relu\n",
-    "D = Discriminator(hidden=8, act=torch.tanh) # torch.tanh or torch.relu\n",
+    "G = Generator(hidden=16, act=torch.relu) # torch.tanh or torch.relu\n",
+    "D = Discriminator(hidden=16, act=torch.relu) # torch.tanh or torch.relu\n",
     "\n",
     "criterion = nn.BCELoss() # nn.BCELoss() or nn.MSELoss() \n",
     "\n",
-    "g_optim = optim.SGD(G.parameters(), g_lr)\n",
-    "d_optim = optim.SGD(D.parameters(), d_lr)\n",
+    "g_optim = optim.SGD(G.parameters(), g_lr, weight_decay=1e-2)\n",
+    "d_optim = optim.SGD(D.parameters(), d_lr, weight_decay=1e-2)\n",
     "\n",
     "# g_optim = optim.Adam(G.parameters(), g_lr, betas=(0.5, 0.999))\n",
     "# d_optim = optim.Adam(D.parameters(), d_lr, betas=(0.5, 0.999))\n",
@@ -413,9 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%time\n",
@@ -430,54 +451,66 @@
     "real_preds = []\n",
     "\n",
     "clear_animation_folder()\n",
-    "save_for_animation = True\n",
+    "save_for_animation = False\n",
+    "\n",
+    "g_updates_steps = 1\n",
+    "d_updates_steps = 1\n",
     "\n",
     "for ep in range(epochs):\n",
-    "    for i, batch_data in enumerate(synthetic_dl):\n",
+    "    for i, batch_data in enumerate(synthetic_dl):        \n",
     "        # Train D\n",
-    "        d_optim.zero_grad()\n",
+    "        D.train()\n",
+    "        for _ in range(d_updates_steps):\n",
+    "            d_optim.zero_grad()\n",
     "\n",
-    "        # on real\n",
-    "        real_pred = D(batch_data)\n",
-    "        d_loss_real = criterion(real_pred, torch.ones(batch_size, 1))\n",
-    "        d_losses_reals.append(d_loss_real.detach())\n",
-    "        real_preds.append(real_pred.mean().detach())\n",
-    "        \n",
-    "        # on fake\n",
-    "        fake = G(get_noise(batch_size))\n",
-    "        fake_pred = D(fake.detach())\n",
-    "        d_loss_fake = criterion(fake_pred, torch.zeros(batch_size, 1))\n",
-    "        d_losses_fakes.append(d_loss_fake.detach())\n",
-    "        fake_preds.append(fake_pred.mean().detach())\n",
-    "        \n",
-    "        d_loss = d_loss_real + d_loss_fake\n",
-    "        d_loss.backward()\n",
-    "        d_grad_norms.append(get_grad_norm(D))\n",
-    "        d_optim.step()\n",
+    "            # on real\n",
+    "            real_pred = D(batch_data)\n",
+    "            d_loss_real = criterion(real_pred, torch.ones(batch_size, 1))\n",
+    "            d_losses_reals.append(d_loss_real.detach())\n",
+    "            real_preds.append(real_pred.mean().detach())\n",
+    "\n",
+    "            # on fake\n",
+    "            fake = G(get_noise(batch_size))\n",
+    "            fake_pred = D(fake.detach())\n",
+    "            d_loss_fake = criterion(fake_pred, torch.zeros(batch_size, 1))\n",
+    "            d_losses_fakes.append(d_loss_fake.detach())\n",
+    "            fake_preds.append(fake_pred.mean().detach())\n",
+    "\n",
+    "            d_loss = d_loss_real + d_loss_fake\n",
+    "            d_loss.backward()\n",
+    "            d_grad_norms.append(get_grad_norm(D))\n",
+    "            d_optim.step()\n",
     "        \n",
     "        # Train G\n",
-    "        g_optim.zero_grad()\n",
-    "        \n",
-    "        fake = G(get_noise(batch_size))\n",
-    "        fake_pred = D(fake)\n",
-    "        g_loss = criterion(fake_pred, torch.ones(batch_size, 1))\n",
-    "        g_losses.append(g_loss.detach())\n",
-    "        \n",
-    "        g_loss.backward()\n",
-    "        g_grad_norms.append(get_grad_norm(G))\n",
-    "        g_optim.step()\n",
+    "        D.eval()\n",
+    "        G.train()\n",
+    "        for _ in range(g_updates_steps):\n",
+    "            g_optim.zero_grad()\n",
+    "            \n",
+    "            fake = G(get_noise(batch_size))\n",
+    "            fake_pred = D(fake)\n",
+    "            g_loss = criterion(fake_pred, torch.ones(batch_size, 1))\n",
+    "            g_losses.append(g_loss.detach())\n",
+    "\n",
+    "            g_loss.backward()\n",
+    "            g_grad_norms.append(get_grad_norm(G))\n",
+    "            g_optim.step()\n",
     "        \n",
     "        # Save for animation (slow), disable this for experiments\n",
     "        if save_for_animation:\n",
+    "            G.eval()\n",
+    "            D.eval()\n",
+    "            \n",
     "            if i % 3 == 0:\n",
     "                f = plt.figure()\n",
     "                vis_D_decision_boundary()\n",
     "                vis_real_fake()\n",
     "                vis_G_grad()\n",
     "                \n",
-    "                total_steps = ep * len(synthetic_dl) + i\n",
-    "                plt.title(f'{int(total_steps / ((epochs + 1) * len(synthetic_dl)) * 100)}%')\n",
-    "                f.savefig(f'{animation_ims}/{total_steps:05}.jpg')\n",
+    "                current_step = ep * len(synthetic_dl) + i\n",
+    "                total_steps = epochs * len(synthetic_dl)\n",
+    "                plt.title(f'{int(current_step / total_steps * 100)}%')\n",
+    "                f.savefig(f'{animation_ims}/{current_step:05}.jpg')\n",
     "                plt.close()\n",
     "\n",
     "    # Visualization\n",
@@ -492,16 +525,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!convert -delay 10 -layers optimize animation_ims/*.jpg anim.gif"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "TODO:\n",
-    "- momentum\n",
-    "- colab"
+    "# !convert -delay 10 -layers optimize animation_ims/*.jpg anim.gif"
    ]
   }
  ],
