Add noise2G visualization

--- a/Playing_with_gans.ipynb
+++ b/Playing_with_gans.ipynb
@@ -9,6 +9,7 @@
     "import math\n",
     "from pathlib import Path\n",
     "import shutil\n",
+    "import colorsys\n",
     "import numpy as np\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -37,8 +38,8 @@
    "outputs": [],
    "source": [
     "def two_gaussians_func(size):\n",
-    "    a = torch.randn((size // 2, 2)) * 0.1 + 0.3\n",
-    "    b = torch.randn((size // 2, 2)) * 0.3 - 0.5\n",
+    "    a = torch.randn((size // 2, 2)) * 0.1 + 0.4\n",
+    "    b = torch.randn((size // 2, 2)) * 0.2 - 0.5\n",
     "    x = torch.cat((a, b))\n",
     "    return x\n",
     "\n",
@@ -133,10 +134,11 @@
    "outputs": [],
    "source": [
     "animation_ims = Path('animation_ims')\n",
+    "noise2G_imgs = Path('noise2G_imgs')\n",
     "\n",
-    "def clear_animation_folder():\n",
-    "    shutil.rmtree(animation_ims, ignore_errors=True)\n",
-    "    animation_ims.mkdir(exist_ok=True)"
+    "def clear_folder(folder):\n",
+    "    shutil.rmtree(folder, ignore_errors=True)\n",
+    "    folder.mkdir(exist_ok=True)"
    ]
   },
   {
@@ -178,6 +180,18 @@
     "    plt.legend()\n",
     "    plt.title('D preds')\n",
     "    \n",
+    "def get_colors_from_matrix(x):\n",
+    "    x_max, y_max = x.max(axis=0)[0]\n",
+    "    x_min, y_min = x.min(axis=0)[0]\n",
+    "    cs = []\n",
+    "    \n",
+    "    for n in x:\n",
+    "        h = (n[0] - x_min) / (x_max - x_min) \n",
+    "        v = (n[1] - y_min) / (y_max - y_min)\n",
+    "        cs.append(colorsys.hsv_to_rgb(h * 0.9 + 0.1, 1,\n",
+    "                                      v * 0.9 + 0.1))\n",
+    "    return cs\n",
+    "    \n",
     "random_matrix_l1, random_matrix_l2 = None, None\n",
     "    \n",
     "def vis_G_intermediate():\n",
@@ -186,13 +200,7 @@
     "    l1, l2, l3 = G.forward_intermediate(val_noise)\n",
     "    l1, l2, l3 = l1.detach(), l2.detach(), l3.detach()\n",
     "    \n",
-    "    x_max, y_max = val_noise.max(axis=0)[0]\n",
-    "    x_min, y_min = val_noise.min(axis=0)[0]\n",
-    "    cs = []\n",
-    "    for n in val_noise:\n",
-    "        r = (n[0] - x_min) / (x_max - x_min) \n",
-    "        b = (n[1] - y_min) / (y_max - y_min)\n",
-    "        cs.append([r, 0, b])\n",
+    "    cs = get_colors_from_matrix(val_noise)\n",
     "    \n",
     "    plt.subplot(n_rows, n_cols, 5)\n",
     "    plt.scatter(val_noise[:, 0], val_noise[:, 1], marker='.',  c=cs)\n",
@@ -372,8 +380,8 @@
    "outputs": [],
    "source": [
     "g_lr = 1e-2 * bs_multiplier\n",
-    "d_lr = 5e-2 * bs_multiplier\n",
-    "epochs = 20\n",
+    "d_lr = 2e-2 * bs_multiplier\n",
+    "epochs = 30\n",
     "\n",
     "G = Generator(hidden=16, act=torch.relu) # torch.tanh or torch.relu\n",
     "D = Discriminator(hidden=16, act=torch.relu) # torch.tanh or torch.relu\n",
@@ -450,7 +458,7 @@
     "fake_preds = []\n",
     "real_preds = []\n",
     "\n",
-    "clear_animation_folder()\n",
+    "clear_folder(animation_ims)\n",
     "save_for_animation = False\n",
     "\n",
     "for ep in range(epochs):\n",
@@ -522,6 +530,63 @@
    "source": [
     "# !convert -delay 10 -layers optimize animation_ims/*.jpg anim.gif"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Noise after generator step by step"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clear_folder(noise2G_imgs)\n",
+    "\n",
+    "noise = get_noise(512)\n",
+    "cs = get_colors_from_matrix(noise)\n",
+    "fake = G(noise)\n",
+    "transition_space = np.linspace(noise, fake.detach(), num=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "for i in range(len(transition_space)):\n",
+    "    clear_output(True)\n",
+    "    f = plt.figure()\n",
+    "    plt.scatter(transition_space[i][:, 0], transition_space[i][:, 1], c=cs, marker='.')\n",
+    "    plt.title(f'{int(i / len(transition_space) * 100)}%')\n",
+    "    \n",
+    "    if save_for_animation:\n",
+    "        f.savefig(f'{noise2G_imgs}/{i:03}.jpg')\n",
+    "        \n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !convert -delay 8 -layers optimize noise2G_imgs/*.jpg anim2.gif"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
