--- a/Playing_with_gans.ipynb
+++ b/Playing_with_gans.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/EvgenyKashin/gan-vis/blob/master/Playing_with_gans.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -76,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data loaders"
+    "## Data loader"
    ]
   },
   {
@@ -125,6 +134,13 @@
    "metadata": {},
    "source": [
     "## Visualization functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Most functions use global variables, do not repeat at home"
    ]
   },
   {
@@ -379,6 +395,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# lr is the most important parameters\n",
     "g_lr = 1e-2 * bs_multiplier\n",
     "d_lr = 2e-2 * bs_multiplier\n",
     "epochs = 30\n",
@@ -394,6 +411,7 @@
     "# g_optim = optim.Adam(G.parameters(), g_lr, betas=(0.5, 0.999))\n",
     "# d_optim = optim.Adam(D.parameters(), d_lr, betas=(0.5, 0.999))\n",
     "\n",
+    "# fixed noise for visualization\n",
     "val_noise = get_noise(batch_size * len(synthetic_dl) // 4)"
    ]
   },
@@ -448,6 +466,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
+    "\n",
     "d_grad_norms = []\n",
     "g_grad_norms = []\n",
     "\n",
@@ -459,7 +478,7 @@
     "real_preds = []\n",
     "\n",
     "clear_folder(animation_ims)\n",
-    "save_for_animation = False\n",
+    "save_for_animation = False # save images for making gifs\n",
     "\n",
     "for ep in range(epochs):\n",
     "    for i, batch_data in enumerate(synthetic_dl):        \n",
@@ -528,6 +547,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# gif from saved images with ImageMagick"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# !convert -delay 10 -layers optimize animation_ims/*.jpg anim.gif"
    ]
   },
@@ -580,13 +608,6 @@
    "source": [
     "# !convert -delay 8 -layers optimize noise2G_imgs/*.jpg anim2.gif"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
