Add few fixes for colab

--- a/Playing_with_gans.ipynb
+++ b/Playing_with_gans.ipynb
@@ -114,15 +114,8 @@
    "source": [
     "bs_multiplier = 2 # 1 / 16, 1, 16, etc\n",
     "batch_size = int(16 * bs_multiplier)\n",
-    "dataset_size = 256"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "dataset_size = 256\n",
+    "\n",
     "# two_gaussians_func or ring_func\n",
     "synthetic_dataset = CustomDistribution(ring_func, dataset_size)\n",
     "synthetic_dl = data.DataLoader(synthetic_dataset, batch_size=batch_size, shuffle=True)\n",
@@ -152,19 +145,21 @@
     "animation_ims = Path('animation_ims')\n",
     "noise2G_imgs = Path('noise2G_imgs')\n",
     "\n",
-    "def clear_folder(folder):\n",
-    "    shutil.rmtree(folder, ignore_errors=True)\n",
-    "    folder.mkdir(exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "n_rows = 2\n",
     "n_cols = 4\n",
+    "\n",
+    "def clear_folder(folder):\n",
+    "    shutil.rmtree(folder, ignore_errors=True)\n",
+    "    folder.mkdir(exist_ok=True)\n",
+    "\n",
+    "def get_grad_norm(model):\n",
+    "    total_norm = 0\n",
+    "    for p in model.parameters():\n",
+    "        if p.grad is not None:\n",
+    "            param_norm = p.grad.data.norm(2)\n",
+    "            total_norm += param_norm.item() ** 2\n",
+    "    total_norm = total_norm ** (1. / 2)\n",
+    "    return total_norm\n",
     "\n",
     "def vis_real():\n",
     "    plt.scatter(synthetic_dataset_all[:, 0], synthetic_dataset_all[:, 1], c='black', marker='.')\n",
@@ -317,15 +312,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_grad_norm(model):\n",
-    "    total_norm = 0\n",
-    "    for p in model.parameters():\n",
-    "        if p.grad is not None:\n",
-    "            param_norm = p.grad.data.norm(2)\n",
-    "            total_norm += param_norm.item() ** 2\n",
-    "    total_norm = total_norm ** (1. / 2)\n",
-    "    return total_norm\n",
-    "\n",
     "class Generator(nn.Module):\n",
     "    def __init__(self, hidden=8, act=torch.tanh):\n",
     "        super().__init__()\n",
@@ -387,6 +373,13 @@
     "        raise ValueError('Wrong distribution parameter')\n",
     "    \n",
     "    return noise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You should probably do a few runs from scratch for success. Each run will be very different."
    ]
   },
   {
@@ -542,12 +535,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Сreating gifs from saved images with ImageMagick"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# gif from saved images with ImageMagick"
+    "# !apt install imagemagick"
    ]
   },
   {
@@ -563,7 +563,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Noise after generator step by step"
+    "## Noise after passing the generator step by step"
    ]
   },
   {
@@ -584,7 +584,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
